# SignLanguageTransformers

./: .gitignore  README.md  SignEaseEDA.ipynb  joint_marking.py  pyproject.toml  remove_extras.py  training.py  training.sh
Davis/: live_segmentation.py  pose_transformersignlanguage.ipynb  preprocess_dataset.py  signlanguage.ipynb
datasets/: video_dataloader.py  video_dataset.py
